# socks5-libuv

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
include/uvsocks5/: hdr.h  uvsocks5.h
program/: CMakeLists.txt  main.c
src/: base.c  client.c  defs.h  dnsc.c  dnsc.h  flow.c  getopt.c  handler.c  internal.h  list.c  list.h  s5.c  s5.h  server.c  util.c
