CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(uvsocks5 C)

SET(CMAKE_C_STANDARD 99)

OPTION(ENABLE_PROGRAMS "Build socks5 program." OFF)

# LIBUV DIR
IF( DEFINED LIBUV_DIR )
    MESSAGE(STATUS "EXISTING LIBUV DIR: " ${LIBUV_DIR})
ELSE()
    SET(LIBUV_DIR ${CMAKE_CURRENT_SOURCE_DIR}/libuv)
    # ADD LIBUV PROJECT
    ADD_SUBDIRECTORY(${LIBUV_DIR} ${CMAKE_CURRENT_BINARY_DIR}/libuv)
ENDIF()

SET(SOCKS5LIBUV_ADDTION_HDR
        ${LIBUV_DIR}/include
        ${CMAKE_CURRENT_SOURCE_DIR}/include
        )

INCLUDE_DIRECTORIES(${SOCKS5LIBUV_ADDTION_HDR})

IF( ENABLE_PROGRAMS )
    ADD_SUBDIRECTORY(program ${CMAKE_CURRENT_BINARY_DIR}/program)
ENDIF()

SET(SOCKS5LIBUV_SRCS
        ${CMAKE_CURRENT_SOURCE_DIR}/src/s5.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/server.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/util.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/handler.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/list.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/dnsc.c
        ${CMAKE_CURRENT_SOURCE_DIR}/src/flow.c
)

ADD_LIBRARY(uvsocks5 STATIC ${SOCKS5LIBUV_SRCS})
TARGET_LINK_LIBRARIES(uvsocks5 uv_a)
