CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
PROJECT(uvsocks5 C)

SET(CMAKE_C_STANDARD 99)

OPTION(ENABLE_PROGRAM "Build socks5 program." OFF)

SET(ENABLE_PROGRAM ON)
# LIBUV DIR
SET(LIBUV_DIR ${CMAKE_SOURCE_DIR}/libuv)

SET(SOCKS5LIBUV_ADDTION_HDR
        ${LIBUV_DIR}/include
        )

INCLUDE_DIRECTORIES(${SOCKS5LIBUV_ADDTION_HDR})

# ADD LIBUV PROJECT
ADD_SUBDIRECTORY(${LIBUV_DIR})

IF( ENABLE_PROGRAM )
    ADD_SUBDIRECTORY(program)
ENDIF()

SET(SOCKS5LIBUV_SRCS
        src/client.c
        src/s5.c
        src/server.c
        src/util.c
)

ADD_LIBRARY(uvsocks5 STATIC ${SOCKS5LIBUV_SRCS})
TARGET_LINK_LIBRARIES(uvsocks5 uv_a)
